--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hashtag/mn",
-  "version": "1.0.0",
+  "name": "@hash-tag_org/mongonet",
+  "version": "1.0.2",
   "description": "Connect your mongodb database with netlify cli",
   "main": "index.js",
   "scripts": {
@@ -13,13 +13,17 @@
   "keywords": [
     "mongodb",
     "netlify",
-    "mongowithnetlify",
-    "mn"
+    "mongo-with-netlify",
+    "mongonet"
   ],
   "author": "https://github.com/HashtagOrg",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/HashtagOrg/mongonetlify/issues"
   },
-  "homepage": "https://github.com/HashtagOrg/mongonetlify#readme"
+  "homepage": "https://github.com/HashtagOrg/mongonetlify#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.4"
+  }
 }
